--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <link
+	<head>
+		<meta charset="utf-8">
+		<link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Dosis&family=Podkova"
     />
-    <link rel="stylesheet" href="/css/main.css" />
-    <title>sdcaulley</title>
-  </head>
-  <body>
-    <div><h1>Code</h1></div>
-    <div><h1>Craft</h1></div>
-    <div><h1>Culture</h1></div>
-  </body>
+		<title>sdcaulley</title>
+	</head>
+	<body>
+		<sdcaulley-site></sdcaulley-site>
+		<script type="module" src="./site.js"></script>
+	</body>
 </html>
