add vaadin router

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 		<title>sdcaulley</title>
 	</head>
 	<body>
-		<sdcaulley-site></sdcaulley-site>
-		<script type="module" src="./site.js"></script>
+		<div id="root"></div>
+		<script type="module" src="./components/routes.js"></script>
 	</body>
 </html>
