added reusable site template

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<div id="root"></div>
+		<script type="module" src="./components/base-view.js"></script>
 		<script type="module" src="./components/routes.js"></script>
 	</body>
 </html>
