updated site template.  working on shared styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,8 @@
     />
 		<title>sdcaulley</title>
 	</head>
-	<body>
+	<body style="background-image:url('vintage-concrete.png')">
 		<div id="root"></div>
-		<script type="module" src="./components/base-view.js"></script>
 		<script type="module" src="./components/routes.js"></script>
 	</body>
 </html>
