changed to cork board background.  created paper effect for elements

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     />
 		<title>sdcaulley</title>
 	</head>
-	<body style="background-image:url('vintage-concrete.png')">
+	<body style="background-image:url('cork-board.png')">
 		<div id="root"></div>
 		<script type="module" src="./components/routes.js"></script>
 	</body>
