reorg for adding admin

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,6 @@
 		<site-container></site-container>
 		<site-routes></site-routes>
 
-		<script type="module" src="./components/site-routes.js"></script>
+		<script type="module" src="./site/components/site-routes.js"></script>
 	</body>
 </html>
