pulled out paper background to separate file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 				z-index: 1;
 			}
 
-      view-container {
+      site-container {
         display: block;
 				postion: relative;
         width: 100vw;
