refactored admin-blog to use the same form for new and edit

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 				z-index: 1;
 			}
 
-      site-container {
+      view-container {
         display: block;
 				postion: relative;
         width: 100vw;
