transformed view-base, header, and footer to use grid layout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,12 +14,6 @@
 				position: relative;
 				z-index: 1;
 			}
-
-      view-container {
-        display: block;
-				postion: relative;
-        width: 100vw;
-      }
 		</style>
 		<title>sdcaulley</title>
 	</head>
@@ -28,8 +22,7 @@
 			You need to enable Javascript to see this site.
 		</noscript>
 
-		<site-container></site-container>
-		<site-routes></site-routes>
+		<div id="anchor"></div>
 
 		<script type="module" src="./site/components/site-routes.js"></script>
 	</body>
